separação da contexto user do contexto client
